--- a/about-us/about-this-starter-kit-changed-content/index.html
+++ b/about-us/about-this-starter-kit-changed-content/index.html
@@ -66,7 +66,7 @@
 
 <section class="section section--themed section--header section--content-center-bottom">
     <div class="section__hero-content">
-        <h1 class="no-air">About this Starter Kit</h1>
+        <h1 class="no-air">About this Starter Kit content changed.</h1>
     </div>
 </section>
 
@@ -118,6 +118,6 @@
     <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
     <script src="/scripts/umbraco-starterkit-app.js"></script>
 
-<!-- Cached by xStatic at 1/29/2021 10:12:47 PM --></body>
+<!-- Cached by xStatic at 1/29/2021 10:15:34 PM --></body>
 
 </html>
