--- a/about-us/about-this-starter-kit-changed-content/index.html
+++ b/about-us/about-this-starter-kit-changed-content/index.html
@@ -118,6 +118,6 @@
     <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
     <script src="/scripts/umbraco-starterkit-app.js"></script>
 
-<!-- Cached by xStatic at 1/29/2021 10:15:34 PM --></body>
+<!-- Cached by xStatic at 1/30/2021 9:01:22 AM --></body>
 
 </html>
