--- a/about-us/todo-list-for-the-starter-kit/index.html
+++ b/about-us/todo-list-for-the-starter-kit/index.html
@@ -78,7 +78,7 @@
             <nav class="nav-bar nav-bar--list">
                 
 
-    <a class="nav-link nav-link--black nav-link--air-bottom" href="/about-us/about-this-starter-kit-changed-content/">About this Starter Kit changed content</a>
+    <a class="nav-link nav-link--black nav-link--air-bottom" href="/about-us/about-this-starter-kit-changed-back/">About this Starter Kit changed back</a>
     <a class="nav-link nav-link--black nav-link--air-bottom nav-link--active" href="/about-us/todo-list-for-the-starter-kit/">Todo list for the Starter Kit</a>
 
             </nav>
@@ -151,6 +151,6 @@
     <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
     <script src="/scripts/umbraco-starterkit-app.js"></script>
 
-<!-- Cached by xStatic at 1/30/2021 9:01:22 AM --></body>
+<!-- Cached by xStatic --></body>
 
 </html>
