--- a/about-us/about-this-starter-kit-changed-back/index.html
+++ b/about-us/about-this-starter-kit-changed-back/index.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>About this Starter Kit changed - Umbraco Sample Site 2</title>
+    <title>About this Starter Kit changed back - Umbraco Sample Site 2</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:url" content="http://xstatic/about-us/about-this-starter-kit-changed/" />
+    <meta property="og:url" content="http://xstatic/about-us/about-this-starter-kit-changed-back/" />
 
     <link rel="stylesheet" href="/css/umbraco-starterkit-style.css" />
     
@@ -66,7 +66,7 @@
 
 <section class="section section--themed section--header section--content-center-bottom">
     <div class="section__hero-content">
-        <h1 class="no-air">About this Starter Kit</h1>
+        <h1 class="no-air">About this Starter Kit content changed.</h1>
     </div>
 </section>
 
@@ -78,7 +78,7 @@
             <nav class="nav-bar nav-bar--list">
                 
 
-    <a class="nav-link nav-link--black nav-link--air-bottom nav-link--active" href="/about-us/about-this-starter-kit-changed/">About this Starter Kit changed</a>
+    <a class="nav-link nav-link--black nav-link--air-bottom nav-link--active" href="/about-us/about-this-starter-kit-changed-back/">About this Starter Kit changed back</a>
     <a class="nav-link nav-link--black nav-link--air-bottom" href="/about-us/todo-list-for-the-starter-kit/">Todo list for the Starter Kit</a>
 
             </nav>
@@ -118,6 +118,6 @@
     <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
     <script src="/scripts/umbraco-starterkit-app.js"></script>
 
-<!-- Cached by xStatic at 1/29/2021 9:59:01 PM --></body>
+<!-- Cached by xStatic --></body>
 
 </html>
