--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <section class="section section--full-height background-image-full overlay overlay--dark section--content-center section--thick-border"
          style="background-image: url('/media/y5ch0f2d/16403439029_f500be349b_o.jpg')">
     <div class="section__hero-content">
-        <h1>Hello World</h1>
+        <h1>Hello World, using Git</h1>
         <p class="section__description">Here is some content changed in Umbraco.</p>
             <a class="button button--border--solid" href="/products/">
                 Buy stuff
