--- a/about-us/about-this-starter-kit-changed-back/index.html
+++ b/about-us/about-this-starter-kit-changed-back/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:url" content="http://xstatic/about-us/about-this-starter-kit-changed-back/" />
+    <meta property="og:url" content="http://https://mulliman.github.io/xStaticGitDemo//about-us/about-this-starter-kit-changed-back/" />
 
     <link rel="stylesheet" href="/css/umbraco-starterkit-style.css" />
     
