--- a/about-us/todo-list-for-the-starter-kit/index.html
+++ b/about-us/todo-list-for-the-starter-kit/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:url" content="http://xstatic/about-us/todo-list-for-the-starter-kit/" />
+    <meta property="og:url" content="http://https://mulliman.github.io/xStaticGitDemo//about-us/todo-list-for-the-starter-kit/" />
 
     <link rel="stylesheet" href="/css/umbraco-starterkit-style.css" />
     
