--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:url" content="http://xstatic/contact/" />
+    <meta property="og:url" content="http://https://mulliman.github.io/xStaticGitDemo//contact/" />
 
     <link rel="stylesheet" href="/css/umbraco-starterkit-style.css" />
     
