--- a/people/jeavon-leopold/index.html
+++ b/people/jeavon-leopold/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:url" content="http://xstatic/people/jeavon-leopold/" />
+    <meta property="og:url" content="http://https://mulliman.github.io/xStaticGitDemo//people/jeavon-leopold/" />
 
     <link rel="stylesheet" href="/css/umbraco-starterkit-style.css" />
     
