--- a/sam-new-page/index.html
+++ b/sam-new-page/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <meta property="og:url" content="http://xstatic/sam-new-page/" />
+    <meta property="og:url" content="http://https://mulliman.github.io/xStaticGitDemo//sam-new-page/" />
 
     <link rel="stylesheet" href="/css/umbraco-starterkit-style.css" />
     
