--- a/new-page/index.html
+++ b/new-page/index.html
@@ -28,7 +28,7 @@
     <a class="nav-link" href="/blog/">Blog</a>
     <a class="nav-link" href="/contact/">Contact</a>
     <a class="nav-link nav-link--active" href="/new-page/">New Page</a>
-    <a class="nav-link" href="/sam-new-page/">Sam New Page</a>
+    <a class="nav-link" href="/sam-new-page-updated/">Sam New Page Updated</a>
 
         </nav>
     </div>
@@ -49,7 +49,7 @@
     <a class="nav-link" href="/blog/">Blog</a>
     <a class="nav-link" href="/contact/">Contact</a>
     <a class="nav-link nav-link--active" href="/new-page/">New Page</a>
-    <a class="nav-link" href="/sam-new-page/">Sam New Page</a>
+    <a class="nav-link" href="/sam-new-page-updated/">Sam New Page Updated</a>
 
         </nav>
 
