--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
          style="background-image: url('/media/y5ch0f2d/16403439029_f500be349b_o.jpg')">
     <div class="section__hero-content">
         <h1>Hello World, this was deployed using git!</h1>
-        <p class="section__description">Here is some content changed in Umbraco. SAM</p>
+        <p class="section__description">Here is some content changed in Umbraco. SAM1</p>
             <a class="button button--border--solid" href="/products/">
                 Buy stuff
             </a>
